--- a/src/tailwind.output.css
+++ b/src/tailwind.output.css
@@ -516,17 +516,51 @@ video {
   --tw-backdrop-saturate:  ;
   --tw-backdrop-sepia:  ;
 }
+  .mb-2 {
+  margin-bottom: 0.5rem;
+}
+  .mb-4 {
+  margin-bottom: 1rem;
+}
   .mb-8 {
   margin-bottom: 2rem;
 }
-  .mt-4 {
-  margin-top: 1rem;
+  .mr-2 {
+  margin-right: 0.5rem;
+}
+  .block {
+  display: block;
+}
+  .inline-block {
+  display: inline-block;
 }
   .flex {
   display: flex;
 }
+  .h-4 {
+  height: 1rem;
+}
   .min-h-screen {
   min-height: 100vh;
+}
+  .w-4 {
+  width: 1rem;
+}
+  @-webkit-keyframes pulse {
+
+  50% {
+    opacity: .5;
+  }
+}
+  @keyframes pulse {
+
+  50% {
+    opacity: .5;
+  }
+}
+  .animate-pulse {
+  -webkit-animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+          animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
   .flex-col {
   flex-direction: column;
@@ -536,6 +570,18 @@ video {
 }
   .justify-center {
   justify-content: center;
+}
+  .justify-between {
+  justify-content: space-between;
+}
+  .overflow-auto {
+  overflow: auto;
+}
+  .whitespace-pre-wrap {
+  white-space: pre-wrap;
+}
+  .rounded-full {
+  border-radius: 9999px;
 }
   .rounded-lg {
   border-radius: 0.5rem;
@@ -548,9 +594,27 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
+  .bg-green-100 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 252 231 / var(--tw-bg-opacity));
+}
   .bg-red-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+  .bg-red-600 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(220 38 38 / var(--tw-bg-opacity));
+}
+  .bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+  .p-2 {
+  padding: 0.5rem;
+}
+  .p-4 {
+  padding: 1rem;
 }
   .px-4 {
   padding-left: 1rem;
@@ -568,11 +632,19 @@ video {
   font-size: 1.125rem;
   line-height: 1.75rem;
 }
+  .text-sm {
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
   .font-bold {
   font-weight: 700;
 }
   .font-semibold {
   font-weight: 600;
+}
+  .text-red-600 {
+  --tw-text-opacity: 1;
+  color: rgb(220 38 38 / var(--tw-text-opacity));
 }
   .text-white {
   --tw-text-opacity: 1;
@@ -585,6 +657,10 @@ video {
 }
   .hover\:bg-opacity-90:hover {
   --tw-bg-opacity: 0.9;
+}
+  .hover\:text-red-800:hover {
+  --tw-text-opacity: 1;
+  color: rgb(153 27 27 / var(--tw-text-opacity));
 }
   .focus\:outline-none:focus {
   outline: 2px solid transparent;
